--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,49 @@
-group 'com.apress.isf'
-version '1.0-SNAPSHOT'
+allprojects {
 
-apply plugin: 'groovy'
-apply plugin: 'java'
+    apply plugin: 'java'
+    apply plugin: 'groovy'
+    apply plugin: 'eclipse'
+    apply plugin: 'idea'
+    apply plugin: 'application'
 
-sourceCompatibility = 1.5
+    group 'com.apress.isf'
+    version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
+    repositories {
+        jcenter()
+        mavenCentral()
+        maven { url "http://repo.spring.io/libs-snapshot"}
+        maven { url 'http://repo.spring.io/milestone'}
+        maven { url 'http://repo.spring.io/libs-release'}
+    }
 
-dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    dependencies {
+        compile 'org.codehaus.groovy:groovy-all:2.3.0'
+        compile 'com.thoughtworks.xstream:xstream:1.4.7'
+        compile 'org.aspectj:aspectjrt:1.7.4'
+        compile 'org.springframework:spring-context:4.0.5.RELEASE'
+        compile 'org.springframework:spring-context-support:4.0.5.RELEASE'
+        compile 'org.springframework:spring-jdbc:4.0.5.RELEASE'
+        compile 'org.springframework.boot:spring-boot-starter-web:1.0.2.RELEASE'
+
+        runtime 'cglib:cglib:3.1'
+        runtime 'org.aspectj:aspectjweaver:1.7.4'
+        runtime 'hsqldb:hsqldb:1.8.0.10'
+
+        testCompile 'junit:junit:4.11'
+        testCompile 'org.springframework:spring-test:4.0.5.RELEASE'
+    }
+
+    test {
+
+        testLogging {
+            //showStandardStreams = true
+            events 'started', 'passed'
+        }
+
+        onOutput { descriptor, event ->
+            logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+        }
+
+    }
 }
