--- a/r01/build.gradle
+++ b/r01/build.gradle
@@ -1,36 +1,36 @@
-///*
-// Usuń ten komentarz, jeśli projekt musi być skompilowany osobno
-//*/
-//apply plugin: 'java'
-//apply plugin: 'groovy'
-//apply plugin: 'eclipse'
-//apply plugin: 'idea'
-//apply plugin: "application"
-//
-//mainClassName = System.getProperty("mainClass")
-//
-//// Uruchom aplikację przy użyciu polecenia gradle run -DmainClass=com.apress.isf.spring.HelloWorldController
-//
-//group = 'com.apress.isf'
-//version = '1.0'
-//
-//repositories {
-// 	mavenCentral()
-// 	maven { url "http://repo.spring.io/libs-snapshot" }
-//    maven { url 'http://repo.spring.io/milestone' }
-//	maven { url 'http://repo.spring.io/libs-release' }
-//}
-//
-//dependencies {
-// 	compile 'org.codehaus.groovy:groovy-all:2.3.0'
-// 	compile 'org.springframework:spring-context:4.0.5.RELEASE'
-// 	compile 'org.springframework.boot:spring-boot-starter-web:1.0.2.RELEASE'
-// 	testCompile 'junit:junit:4.11'
-//}
-//
-//test {
-// 	testLogging {
-//	 	events 'started', 'passed'
-// 	}
-//}
-//
+/*
+ Usuń ten komentarz, jeśli projekt musi być skompilowany osobno
+*/
+apply plugin: 'java'
+apply plugin: 'groovy'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: "application"
+
+mainClassName = System.getProperty("mainClass")
+
+// Uruchom aplikację przy użyciu polecenia gradle run -DmainClass=com.apress.isf.spring.HelloWorldController
+
+group = 'com.apress.isf'
+version = '1.0'
+
+repositories {
+ 	mavenCentral()
+ 	maven { url "http://repo.spring.io/libs-snapshot" }
+    maven { url 'http://repo.spring.io/milestone' }
+	maven { url 'http://repo.spring.io/libs-release' }
+}
+
+dependencies {
+ 	compile 'org.codehaus.groovy:groovy-all:2.3.0'
+ 	compile 'org.springframework:spring-context:4.0.5.RELEASE'
+ 	compile 'org.springframework.boot:spring-boot-starter-web:1.0.2.RELEASE'
+ 	testCompile 'junit:junit:4.11'
+}
+
+test {
+ 	testLogging {
+	 	events 'started', 'passed'
+ 	}
+}
+
