--- a/r03/build.gradle
+++ b/r03/build.gradle
@@ -1,24 +1,24 @@
-group 'com.apress.isf'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'groovy'
-apply plugin: 'java'
-apply plugin: "application"
-
-mainClassName = System.getProperty("mainClass")
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.4.5'
-    compile 'org.springframework:spring-context:4.0.5.RELEASE'
-        testCompile group: 'junit', name: 'junit', version: '4.11'
-}
-
-test {
-    testLogging {
-        events 'started', 'passed'
-    }
-}
+//group 'com.apress.isf'
+//version '1.0-SNAPSHOT'
+//
+//apply plugin: 'groovy'
+//apply plugin: 'java'
+//apply plugin: "application"
+//
+//mainClassName = System.getProperty("mainClass")
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//dependencies {
+//    compile 'org.codehaus.groovy:groovy-all:2.4.5'
+//    compile 'org.springframework:spring-context:4.0.5.RELEASE'
+//        testCompile group: 'junit', name: 'junit', version: '4.11'
+//}
+//
+//test {
+//    testLogging {
+//        events 'started', 'passed'
+//    }
+//}
