--- a/r10/build.gradle
+++ b/r10/build.gradle
@@ -2,6 +2,8 @@
 //apply plugin: 'groovy'
 //apply plugin: 'eclipse'
 //apply plugin: 'idea'
+//apply plugin: 'war'
+//apply plugin: 'jetty'
 //
 //group = 'com.apress.isf'
 //version = '1.0'
@@ -15,7 +17,8 @@
 //    compile 'org.aspectj:aspectjrt:1.7.4'
 //    compile 'org.springframework:spring-context:4.0.5.RELEASE'
 //    compile 'org.springframework:spring-jdbc:4.0.5.RELEASE'
-//    compile 'org.springframework.boot:spring-boot-starter-web:1.1.1.RELEASE'
+//    compile 'org.springframework.boot:spring-boot-starter-web:1.0.2.RELEASE'
+//    compile 'org.springframework:spring-webmvc:4.0.5.RELEASE'
 //
 //    runtime 'cglib:cglib:3.1'
 //    runtime 'org.aspectj:aspectjweaver:1.7.4'
