--- a/build.gradle
+++ b/build.gradle
@@ -136,3 +136,12 @@ project(':r17'){
         //compile 'org.springframework.data:spring-data-redis:1.2.0.RELEASE	'
     }
 }
+
+project(':r18'){
+    dependencies {
+        compile 'org.springframework.amqp:spring-rabbit:1.3.3.RELEASE'
+        compile 'org.springframework.data:spring-data-mongodb:1.4.2.RELEASE'
+        compile 'org.springframework:spring-oxm:4.0.5.RELEASE'
+        //compile 'org.springframework.data:spring-data-redis:1.2.0.RELEASE	'
+    }
+}
